libraries/ckit/regression/valid-programs/a2.c
main () {

  int i[4], *j = i;
}
