libraries/ckit/regression/invalid-programs/r5.c
main () {

  int j[4];
  int i[4] = j;
}
